--- a/exercise2.html
+++ b/exercise2.html
@@ -8,12 +8,21 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
     <body>
+      <header>
+        <h1>GTA 6</h1>
+      </header>
       <nav>
         <a href="exercise1.html">Exercise 1</a>
         <a href="exercise2.html">Exercise 2</a>
+        <a href="google.com">Google</a>
+        <a href="youtube.com">Youtube</a>
       </nav>
+<main>
 
-
+</main>
+<aside>
+  i am ufc fighter with a record of 22-0, i will be a double chamnp.
+</aside>
       <script src="script.js"></script>
     </body>
 </html>
